# logpipe

./: CHANGELOG  LICENSE  README.md
app/: Cargo.toml  config.example.toml
app/src/: batcher.rs  config.rs  event.rs  journal.rs  main.rs  opensearch.rs
app/src/sources/: fifo.rs
app/systemd/: logpipe.service
drv/: .gitignore  Cargo.toml
drv/src/: batcher.rs  config.rs
drv/src/sources/: fifo.rs  mod.rs
drv/systemd/: os-driver.service
