[package]
name = "logpipe"
version = "0.3.0"
edition = "2021"
authors = ["nettrash <nettrash@nettrash.me>"]
description = "Log-forwarding service for Linux: lines written to the /dev/logpipe named pipe (FIFO) are streamed into an OpenSearch endpoint"
license = "MIT"
readme = "../README.md"

[[bin]]
name = "logpipe"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.38", features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "sync",
    "time",
    "net",      # AsyncFd, used to drive the FIFO via epoll
    "io-util",
] }
tokio-util = { version = "0.7", features = ["rt"] }

# HTTP client for OpenSearch _bulk
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "gzip",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Cheap, ref-counted byte buffers — used to retry _bulk POSTs without
# re-copying the (potentially multi-MB) gzipped body each attempt.
bytes = "1"

# gzip the _bulk request body. reqwest's `gzip` feature only handles the
# response side; we compress outgoing bodies ourselves.
flate2 = "1"

# Direct mkfifo(2) syscall + unix file-type helpers
libc = "0.2"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging / tracing for the service itself
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Time
time = { version = "0.3", features = ["serde", "formatting", "macros"] }

# Hostname for tagging events
hostname = "0.4"

[dev-dependencies]
# Scoped temp dirs/files for filesystem-touching unit tests (ensure_fifo,
# Config::load). Cleaned up on drop, so tests don't leak under /tmp.
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3
